--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "test": "node_modules/.bin/grunt test"
   },
   "dependencies": {
-    "has": "*"
+
   },
   "devDependencies": {
     "grunt": "~0.3.15",
     "bbb": "*",
     "grunt-contrib": "*",
-    "grunt-jasmine-task": "*"
+    "grunt-jasmine-task": "*",
+    "grunt-closure-compiler": "*"
   },
   "keywords": []
 }
